Instructor the end

--- a/src/main/webapp/WEB-INF/views/course/get_all_course_by_company_id.html
+++ b/src/main/webapp/WEB-INF/views/course/get_all_course_by_company_id.html
@@ -32,6 +32,8 @@
         <th scope="col">Course Name</th>
         <th scope="col">Duration</th>
         <th scope="col">Description</th>
+        <th scope="col">Instructor</th>
+<!--        <th scope="col">AssignGroup</th>-->
         <th scope="col">Groups</th>
         <th scope="col">Update</th>
         <th scope="col">Delete</th>
@@ -43,6 +45,26 @@
         <td th:text="${course.courseName}"></td>
         <td th:text="${course.duration}"></td>
         <td th:text="${course.description}"></td>
+
+<!--        <td>-->
+<!--            <form th:method="POST"-->
+<!--                  th:action="@{/{courseId}/{id}/assignGroup(courseId=${courseId}, id=${group.id})}">-->
+<!--                <select name="instructor" class="form-select form-select-sm" aria-label=".form-select-sm example"-->
+<!--                        th:object="${group}" th:field="*{id}">-->
+<!--                    <option th:each="group : ${groups}"-->
+<!--                            th:value="${group.id}"-->
+<!--                            th:text="${group.groupName}">-->
+<!--                    </option>-->
+<!--                </select>-->
+<!--                <input type="submit" value="submit"/>-->
+<!--            </form>-->
+<!--        </td>-->
+
+        <td>
+            <a th:href="@{/getAllInstructorByCourseId/{courseId}(courseId=${course.id})}">
+                <button>Instructors</button>
+            </a>
+        </td>
 
         <td>
             <a th:href="@{/getAllGroupByCourseId/{courseId}(courseId=${course.id})}">
@@ -69,12 +91,12 @@
 <br><br><br><br>
 <div style="text-align: center">
     <a th:href="@{/getAllCourseByCompanyId/{companyId}/new(companyId=${companyId})}">
-        <button style="font-size: 25px;"> Add Course </button>
+        <button style="font-size: 25px;"> Add Course</button>
     </a>
 </div>
 <div style="text-align: center">
     <a th:href="@{/getAllCourse/{companyId}(companyId=${companyId})}">
-        <button style="font-size: 25px;"> SEE ALL COURSE </button>
+        <button style="font-size: 25px;"> SEE ALL COURSE</button>
     </a>
 </div>
 <!--<div style="text-align: center">-->
