--- a/src/main/webapp/WEB-INF/views/group/update_group.html
+++ b/src/main/webapp/WEB-INF/views/group/update_group.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Save Group</title>
+    <title>Update Group</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <style>
@@ -22,18 +22,17 @@
     </style>
 </head>
 <body>
-<div>
-    <form action="#" th:action="@{/{courseId}/saveGroup(courseId=${courseId})}" th:object="${newGroup}"
-          method="POST">
-        <input type="hidden" name="id" th:field="*{id}">
-        <input type="text" name="groupName" th:field="*{groupName}" placeholder="Group Name">
-        <br><br>
-        <input type="text" name="dateOfStart" th:field="*{dataOfStart}" placeholder="Date Of Start">
-        <br><br>
-        <input type="text" name="image" th:field="*{image}" placeholder="Image">
-        <br><br>
-        <input type="submit" value="Save Group">
-    </form>
-</div>
+<form action="#" th:action="@{/{courseId}/{id}/saveUpdateGroupByCourseId(courseId=${courseId}, id=${group.id})}"
+      th:object="${group}" method="POST">
+
+    <input type="hidden" name="id" th:field="*{id}">
+    <input type="text" name="groupName" th:field="*{groupName}" placeholder="Group Name">
+    <br><br>
+    <input type="text" name="dateOfStart" th:field="*{dataOfStart}" placeholder="Date Of Start">
+    <br><br>
+    <input type="text" name="image" th:field="*{image}" placeholder="image">
+    <br><br>
+    <input type="submit" value="Update Group">
+</form>
 </body>
 </html>
