--- a/src/main/webapp/WEB-INF/views/instructor/get_all_instructor_by_course_id.html
+++ b/src/main/webapp/WEB-INF/views/instructor/get_all_instructor_by_course_id.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>All Group By Course Id</title>
+    <title>All Instructor By Course Id</title>
     <style>table,
     td {
         border: 1px solid #333333FF;
@@ -29,28 +29,32 @@
     <thead class="table-dark">
     <tr>
         <th scope="colgroup">Id</th>
-        <th scope="col">Group Name</th>
-        <th scope="col">Date Of Start</th>
-        <th scope="col">Image</th>
+        <th scope="col">First name</th>
+        <th scope="col">Last name</th>
+        <th scope="col">Phone number</th>
+        <th scope="col">Email</th>
+        <th scope="col">Specialization</th>
         <th scope="col">Update</th>
         <th scope="col">Delete</th>
     </tr>
     </thead>
     <tbody class="table-success">
-    <tr th:each="group: ${getAllGroupByCourseId}">
-        <td th:text="${group.id}"></td>
-        <td th:text="${group.groupName}"></td>
-        <td th:text="${group.dataOfStart}"></td>
-        <td th:text="${group.image}"></td>
+    <tr th:each="instructor: ${getAllInstructorByCourseId}">
+        <td th:text="${instructor.id}"></td>
+        <td th:text="${instructor.firstname}"></td>
+        <td th:text="${instructor.lastname}"></td>
+        <td th:text="${instructor.phoneNumber}"></td>
+        <td th:text="${instructor.email}"></td>
+        <td th:text="${instructor.specialization}"></td>
 
             <td>
-              <a th:href="@{/updateGroupByCourseId/{courseId}/{id}(id=${group.id}, courseId=${courseId})}">
+              <a th:href="@{/updateInstructor/{id}(id=${instructor.id})}">
                 <button>Update</button>
               </a>
             </td>
 
             <td>
-              <a th:href="@{/{courseId}/{id}/deleteGroupById(courseId=${courseId}, id=${group.id})}"
+              <a th:href="@{/{courseId}/{id}/deleteInstructorById(courseId=${courseId}, id=${instructor.id})}"
                  onclick="return confirm('Are you sure to delete this course?');">
                 <button>Delete</button>
               </a>
@@ -61,13 +65,13 @@
 </table>
 <br><br><br><br>
 <div style="text-align: center">
-    <a th:href="@{/getAllGroupByCourseId/{courseId}/new(courseId=${courseId})}">
-        <button style="font-size: 25px;"> Add Group</button>
+    <a th:href="@{/getAllInstructorByCourseId/{courseId}/new(courseId=${courseId})}">
+        <button style="font-size: 25px;"> Add Instructor </button>
     </a>
 </div>
 <div style="text-align: center">
-    <a th:href="@{/getAllGroup/{courseId}(courseId=${courseId})}">
-        <button style="font-size: 25px;"> SEE ALL GROUP </button>
+    <a th:href="@{/getAllInstructor/{courseId}(courseId=${courseId})}">
+        <button style="font-size: 25px;"> SEE ALL INSTRUCTOR</button>
     </a>
 </div>
 </body>
