--- a/src/main/webapp/WEB-INF/views/lesson/get_all_lesson_by_course_id.html
+++ b/src/main/webapp/WEB-INF/views/lesson/get_all_lesson_by_course_id.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>All Instructor By Course Id</title>
+    <title>All Lesson By Course Id</title>
     <style>table,
     td {
         border: 1px solid #333333FF;
@@ -29,32 +29,25 @@
     <thead class="table-dark">
     <tr>
         <th scope="colgroup">Id</th>
-        <th scope="col">First name</th>
-        <th scope="col">Last name</th>
-        <th scope="col">Phone number</th>
-        <th scope="col">Email</th>
-        <th scope="col">Specialization</th>
+        <th scope="col">Lesson name</th>
         <th scope="col">Update</th>
         <th scope="col">Delete</th>
     </tr>
     </thead>
     <tbody class="table-success">
-    <tr th:each="instructor: ${getAllInstructorByCourseId}">
-        <td th:text="${instructor.id}"></td>
-        <td th:text="${instructor.firstname}"></td>
-        <td th:text="${instructor.lastname}"></td>
-        <td th:text="${instructor.phoneNumber}"></td>
-        <td th:text="${instructor.email}"></td>
-        <td th:text="${instructor.specialization}"></td>
+    <tr th:each="lesson: ${getAllLessonByCourseId}">
+        <td th:text="${lesson.id}"></td>
+        <td th:text="${lesson.lessonName}"></td>
+
 
         <td>
-            <a th:href="@{/updateInstructor/{id}(id=${instructor.id})}">
+            <a th:href="@{/updateLesson/{id}(id=${lesson.id})}">
                 <button>Update</button>
             </a>
         </td>
 
         <td>
-            <a th:href="@{/{courseId}/{id}/deleteInstructorById(courseId=${courseId}, id=${instructor.id})}"
+            <a th:href="@{/{courseId}/{id}/deleteLessonById(courseId=${courseId}, id=${lesson.id})}"
                onclick="return confirm('Are you sure to delete this course?');">
                 <button>Delete</button>
             </a>
@@ -65,13 +58,13 @@
 </table>
 <br><br><br><br>
 <div style="text-align: center">
-    <a th:href="@{/getAllInstructorByCourseId/{courseId}/new(courseId=${courseId})}">
-        <button style="font-size: 25px;"> Add Instructor</button>
+    <a th:href="@{/getAllLessonByCourseId/{courseId}/new(courseId=${courseId})}">
+        <button style="font-size: 25px;"> Add Lesson </button>
     </a>
 </div>
 <div style="text-align: center">
-    <a th:href="@{/getAllInstructor/{courseId}(courseId=${courseId})}">
-        <button style="font-size: 25px;"> SEE ALL INSTRUCTOR</button>
+    <a th:href="@{/getAllLesson/{courseId}(courseId=${courseId})}">
+        <button style="font-size: 25px;"> SEE ALL LESSON </button>
     </a>
 </div>
 </body>
