--- a/src/main/webapp/WEB-INF/views/lesson/save_lesson.html
+++ b/src/main/webapp/WEB-INF/views/lesson/save_lesson.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Update Lesson</title>
+    <title>Save Lesson</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <style>
@@ -23,19 +23,11 @@
 </head>
 <body>
 <div>
-    <form action="#" th:action="@{/{courseId}/{id}/saveUpdateInstructor(courseId=${courseId}, id=${updateInstructor.id})}" th:object="${updateInstructor}" method="POST">
+    <form action="#" th:action="@{/{courseId}/saveLesson(courseId=${courseId})}" th:object="${newLesson}" method="POST">
         <input type="hidden" name="id" th:field="*{id}">
-        <input type="text" name="firstname" th:field="*{firstname}" placeholder="First Name">
+        <input type="text" name="lessonName" th:field="*{lessonName}" placeholder="Lesson Name">
         <br><br>
-        <input type="text" name="lastname" th:field="*{lastname}" placeholder="Last Name">
-        <br><br>
-        <input type="text" name="phoneNumber" th:field="*{phoneNumber}" placeholder="Phone Number">
-        <br><br>
-        <input type="text" name="email" th:field="*{email}" placeholder="Email">
-        <br><br>
-        <input type="text" name="specialization" th:field="*{specialization}" placeholder="Specialization">
-        <br><br>
-        <input type="submit" value="Update Instructor">
+        <input type="submit" value="Save Lesson">
     </form>
 </div>
 </body>
