--- a/src/main/webapp/WEB-INF/views/instructor/update_instructor.html
+++ b/src/main/webapp/WEB-INF/views/instructor/update_instructor.html
@@ -31,7 +31,7 @@
         <br><br>
         <input type="text" name="phoneNumber" th:field="*{phoneNumber}" placeholder="Phone Number">
         <br><br>
-        <input type="text" name="email" th:field="*{email}" placeholder="Email">
+        <input type="email" name="email" th:field="*{email}" placeholder="Email">
         <br><br>
         <input type="text" name="specialization" th:field="*{specialization}" placeholder="Specialization">
         <br><br>
