--- a/src/main/webapp/WEB-INF/views/student/save_student.html
+++ b/src/main/webapp/WEB-INF/views/student/save_student.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Save Instructor</title>
+    <title>Save Student</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <style>
@@ -23,19 +23,19 @@
 </head>
 <body>
 <div>
-    <form action="#" th:action="@{/{courseId}/saveInstructor(courseId=${courseId})}" th:object="${newInstructor}" method="POST">
+    <form action="#" th:action="@{/{groupId}/saveStudent(groupId=${groupId})}" th:object="${newStudent}" method="POST">
         <input type="hidden" name="id" th:field="*{id}">
-        <input type="text" name="firstname" th:field="*{firstname}" placeholder="First Name">
+        <input type="text" name="firstname" th:field="*{firstName}" placeholder="Student Name">
         <br><br>
-        <input type="text" name="lastname" th:field="*{lastname}" placeholder="Last Name">
+        <input type="text" name="lastName" th:field="*{lastName}" placeholder="Student Last Name">
         <br><br>
-        <input type="text" name="phoneNumber" th:field="*{phoneNumber}" placeholder="Phone Number">
+        <input type="text" name="phoneNumber" th:field="*{phoneNumber}" placeholder="Phone number">
         <br><br>
-        <input type="email" name="email" th:field="*{email}" placeholder="Email">
+        <input type="text" name="email" th:field="*{email}" placeholder="Email">
         <br><br>
-        <input type="text" name="specialization" th:field="*{specialization}" placeholder="Specialization">
+        <input type="text" name="studyFormat" th:field="*{studyFormat}" placeholder="Study Format">
         <br><br>
-        <input type="submit" value="Save Instructor">
+        <input type="submit" value="Save Student">
     </form>
 </div>
 </body>
