--- a/src/main/webapp/WEB-INF/views/company/get_all_company.html
+++ b/src/main/webapp/WEB-INF/views/company/get_all_company.html
@@ -31,6 +31,7 @@
         <th scope="colgroup">Id</th>
         <th scope="col">Company Name</th>
         <th scope="col">Located Country</th>
+        <th scope="col">ST_count</th>
         <th scope="col">Courses</th>
         <th scope="col">Update</th>
         <th scope="col">Delete</th>
@@ -41,6 +42,7 @@
         <td th:text="${company.id}"></td>
         <td th:text="${company.companyName}"></td>
         <td th:text="${company.locatedCountry}"></td>
+        <td th:text="${company.student}"></td>
 
         <td>
             <a th:href="@{/getAllCourseByCompanyId/{companyId}(companyId=${company.id})}">
