--- a/src/main/webapp/WEB-INF/views/course/get_all_course_by_company_id.html
+++ b/src/main/webapp/WEB-INF/views/course/get_all_course_by_company_id.html
@@ -34,7 +34,7 @@
         <th scope="col">Description</th>
         <th scope="col">Instructors</th>
         <th scope="col">Lessons</th>
-       <!-- <th scope="col">AssignGroup</th>  -->
+        <th scope="col">AssignGroup</th>
         <th scope="col">Groups</th>
         <th scope="col">Update</th>
         <th scope="col">Delete</th>
@@ -57,6 +57,20 @@
             <a th:href="@{/getAllLessonByCourseId/{courseId}(courseId=${course.id})}">
                 <button>Lessons</button>
             </a>
+        </td>
+
+        <td>
+            <form th:method="POST"
+                  th:action="@{/{courseId}/assignGroup(courseId=${course.getId()})}">
+                <select name="instructor" class="form-select form-select-sm" aria-label=".form-select-sm example"
+                        th:object="${group}"
+                        th:field="*{id}">
+                    <option th:each="group : ${groups}"
+                            th:value="${group.id}"
+                            th:text="${group.groupName}"></option>
+                </select>
+                <input type="submit" value="submit"/>
+            </form>
         </td>
 
         <td>
