--- a/src/main/webapp/WEB-INF/views/company/get_all_company.html
+++ b/src/main/webapp/WEB-INF/views/company/get_all_company.html
@@ -57,7 +57,7 @@
         </td>
 
         <td>
-            <a th:href="@{deleteCompany(companyId=${company.id})}"
+            <a th:href="@{/deleteCompany(companyId=${company.id})}"
                onclick="return confirm('Are you sure to delete this company?');">
                 <button>Delete</button>
             </a>
