--- a/src/main/webapp/WEB-INF/views/course/get_all_course_by_company_id.html
+++ b/src/main/webapp/WEB-INF/views/course/get_all_course_by_company_id.html
@@ -32,6 +32,7 @@
         <th scope="col">Course Name</th>
         <th scope="col">Duration</th>
         <th scope="col">Description</th>
+        <th scope="col">AssignInstructor</th>
         <th scope="col">Instructors</th>
         <th scope="col">Lessons</th>
         <th scope="col">AssignGroup</th>
@@ -48,6 +49,19 @@
         <td th:text="${course.description}"></td>
 
         <td>
+            <form th:method="POST"
+                  th:action="@{/{courseId}/assignInstructor(courseId=${course.getId()})}">
+                <select name="instructor" class="form-select form-select-sm" aria-label=".form-select-sm example"
+                        th:object="${instructor}" th:field="*{id}">
+                    <option th:each="instructor : ${instructors}"
+                            th:value="${instructor.id}"
+                            th:text="${instructor.firstname}"></option>
+                </select>
+                <input type="submit" value="submit"/>
+            </form>
+        </td>
+
+        <td>
             <a th:href="@{/getAllInstructorByCourseId/{courseId}(courseId=${course.id})}">
                 <button>Instructors</button>
             </a>
@@ -62,7 +76,7 @@
         <td>
             <form th:method="POST"
                   th:action="@{/{courseId}/assignGroup(courseId=${course.getId()})}">
-                <select name="instructor" class="form-select form-select-sm" aria-label=".form-select-sm example"
+                <select name="group" class="form-select form-select-sm" aria-label=".form-select-sm example"
                         th:object="${group}"
                         th:field="*{id}">
                     <option th:each="group : ${groups}"
@@ -108,7 +122,7 @@
 </div>
 <div style="text-align: center">
     <a th:company th:href="@{/getAllCompany}">
-        <button style="font-size: 15px;"> Back to companies </button>
+        <button style="font-size: 15px;"> Back to companies</button>
     </a>
 </div>
 </body>
