--- a/src/main/webapp/WEB-INF/views/instructor/get_all_instructor_by_course_id.html
+++ b/src/main/webapp/WEB-INF/views/instructor/get_all_instructor_by_course_id.html
@@ -34,6 +34,7 @@
         <th scope="col">Phone number</th>
         <th scope="col">Email</th>
         <th scope="col">Specialization</th>
+        <th scope="col">ST_count</th>
         <th scope="col">Update</th>
         <th scope="col">Delete</th>
     </tr>
@@ -46,6 +47,7 @@
         <td th:text="${instructor.phoneNumber}"></td>
         <td th:text="${instructor.email}"></td>
         <td th:text="${instructor.specialization}"></td>
+        <td th:text="${instructor.student}"></td>
 
         <td>
             <a th:href="@{/updateInstructor/{id}(id=${instructor.id})}">
