--- a/src/main/webapp/WEB-INF/views/task/get_all_task_by_lesson_id.html
+++ b/src/main/webapp/WEB-INF/views/task/get_all_task_by_lesson_id.html
@@ -67,7 +67,7 @@
 </div>
 <div style="text-align: center">
   <a th:href="@{/getAllTask/{lessonId}(lessonId=${lessonId})}">
-    <button style="font-size: 25px;"> SEE ALL STUDENT </button>
+    <button style="font-size: 25px;"> SEE ALL TASK </button>
   </a>
 </div>
 </body>
