This project all the end

--- a/src/main/webapp/WEB-INF/views/group/get_all_group_by_course_id.html
+++ b/src/main/webapp/WEB-INF/views/group/get_all_group_by_course_id.html
@@ -72,7 +72,7 @@
 
         <td>
             <a th:href="@{/{courseId}/{id}/deleteGroupById(courseId=${courseId}, id=${group.id})}"
-               onclick="return confirm('Are you sure to delete this course?');">
+               onclick="return confirm('Are you sure to delete this group?');">
                 <button>Delete</button>
             </a>
         </td>
