--- a/src/main/webapp/WEB-INF/views/lesson/get_all_lesson_by_course_id.html
+++ b/src/main/webapp/WEB-INF/views/lesson/get_all_lesson_by_course_id.html
@@ -54,7 +54,7 @@
 
         <td>
             <a th:href="@{/{courseId}/{id}/deleteLessonById(courseId=${courseId}, id=${lesson.id})}"
-               onclick="return confirm('Are you sure to delete this course?');">
+               onclick="return confirm('Are you sure to delete this lesson?');">
                 <button>Delete</button>
             </a>
         </td>
