--- a/src/main/webapp/WEB-INF/views/instructor/get_all_instructor_by_course_id.html
+++ b/src/main/webapp/WEB-INF/views/instructor/get_all_instructor_by_course_id.html
@@ -57,7 +57,7 @@
 
         <td>
             <a th:href="@{/{courseId}/{id}/deleteInstructorById(courseId=${courseId}, id=${instructor.id})}"
-               onclick="return confirm('Are you sure to delete this course?');">
+               onclick="return confirm('Are you sure to delete this instructor?');">
                 <button>Delete</button>
             </a>
         </td>
