--- a/src/main/webapp/WEB-INF/views/student/get_all_student_by_group_id.html
+++ b/src/main/webapp/WEB-INF/views/student/get_all_student_by_group_id.html
@@ -56,7 +56,7 @@
 
                 <td>
                     <a th:href="@{/{groupId}/{id}/deleteStudentById(groupId=${groupId}, id=${student.id})}"
-                       onclick="return confirm('Are you sure to delete this course?');">
+                       onclick="return confirm('Are you sure to delete this student?');">
                         <button>Delete</button>
                     </a>
                 </td>
